@@ -1,0 +1,5 @@
+BEGIN {
+	printf "%d\n", -.4
+	printf "%d\n", -0.0
+	printf "%d\n", -.9
+}
